[package]
name = "liquid-audio-chat"
version = "0.1.0"
edition = "2021"
description = "Low-latency LFM2.5-Audio chat client"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "io-util", "fs", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
rustyline = "14"
cpal = "0.15"
hound = "3"
futures-util = "0.3"
bytes = "1"
crossbeam-channel = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
